<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weather_condition"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:id="@+id/weather_condition"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:rowCount="3"
        android:columnCount="2"
        app:layout_constraintTop_toTopOf="@id/weather_condition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="24dp">

        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1">

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feels_like"
                android:textSize="20sp"
                android:textColor="@color/colorLightGray"/>

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/feels_like"
                android:textSize="24sp"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1">

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textSize="20sp"
                android:textColor="@color/colorLightGray"/>

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/humidity"
                android:textSize="24sp"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1">

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wind_speed"
                android:textSize="20sp"
                android:textColor="@color/colorLightGray"/>

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/wind_speed"
                android:textSize="24sp"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1">

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clouds"
                android:textSize="20sp"
                android:textColor="@color/colorLightGray"/>

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/clouds"
                android:textSize="24sp"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1">

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/visibility"
                android:textSize="20sp"
                android:textColor="@color/colorLightGray"/>

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/visibility"
                android:textSize="24sp"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1">

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/air_pressure"
                android:textSize="20sp"
                android:textColor="@color/colorLightGray"/>

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/air_pressure"
                android:textSize="24sp"
                android:textColor="@android:color/black" />

        </LinearLayout>

    </GridLayout>



</androidx.constraintlayout.widget.ConstraintLayout>